# THAS_final

./: .gitignore  1_plan.yaml  Big_plan.yaml  System_prompt_for_sonnet.yaml  change_plan.yaml  clean_imports.py  clean_js.py  compare_Grok3.py  conversation_summary.md  conversation_with_logs.md  generate_payment_data.py  new_attendance.csv  new_attendance_data.txt  organizer.py  package-lock.json  package.json  project_instruction.yaml  pyproject.toml  salary_calculator.py  start.bat  task_records.md  temp_attendance.csv  thas_session_summary_20250221.yaml  thas_session_summary_20250223.yaml  thas_session_summary_20250224.yaml  update_attendance.py  급여관리시스템페이지.yaml
app/test/: update_attendance.py
backend/: config.py  db_update.py  install_dependencies.bat  package-lock.json  package.json  requirements.txt  reset_all_payroll.py  reset_payroll.py  run_server.py  sync_attendance_db_to_csv.py  update_attendance_test.py  update_attendance_with_sync.py  update_schema.py  update_script.py
backend/app/: __init__.py
backend/config/: __init__.py  database.py
backend/data/: employees.csv  payroll.db  payroll.sqbpro  payroll_backup_20250303_154858.db
backend/models/: __init__.py  models.py
backend/scripts/: add_test_attendance.py  init_database.py  migrate_csv_to_db.py  test_api.py  update_db_schema.py
backend/src/: app.js
backend/utils/: data_processor.py  insurance_calculator.py  overtime_calculator.py  pay_calculator.py  (+2 more)
data/: employees.csv  payroll.csv
frontend/: jest.config.js  package-lock.json  package.json
server/: aiAnalysis.js  index.js
(+104 files in other folders)
