[tool.poetry]
name = "thas-final"
version = "0.1.0"
description = "AI Business Assistant"
authors = ["DH CHE <midiummin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
flask = "^3.1.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.37"
flask-sqlalchemy = "^3.1.1"
flask-cors = "^5.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pytest = "^8.3.4"
flask-jwt-extended = "^4.7.1"
gunicorn = "^23.0.0"
alembic = "^1.14.1"
psycopg2-binary = "^2.9.10"
langchain = "^0.3.17"
langchain-openai = "^0.3.3"
langchain-community = "^0.3.16"
langgraph = "^0.2.69"
openai = "^1.61.0"
pydantic = "^2.10.6"
requests = "^2.32.3"
numpy = ">=1.22.4,<2.0.0"
pandas = "^2.2.3"
holidays = "^0.67"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^25.1.0"
isort = "^6.0.0"
flake8 = "^7.1.1"
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
